--- a/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
@@ -19,6 +19,7 @@
             <converters:FormatDateTimeConverter x:Key="FormatDateTimeConverter" Format="H:mm:ss" />
             <converters:BoolToBrushConverter x:Key="BoolToBrushConverter" ColorForFalse="Blue" ColorForTrue="Orange" />
             <services:ServicesBindingHelper x:Key="ServicesBindingHelper" />
+            <converters:NegatedBoolConverter x:Key="NegatedBoolConverter"/>
             <converters:LayoutTypeToStyleConverter x:Key="CloseConversationButtonStyleConverter">
                 <converters:LayoutTypeToStyleConverter.OverlayStyle>
                     <Style TargetType="Button">
